--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-tumblr": "^0.1.x",
     "passport-twitter": "^1.x.x",
     "serve-static": "^1.9.x",
-    "underscore": "^1.x.x"
+    "underscore": "^1.x.x",
+    "gravatar": "*"
   },
   "devDependencies": {
     "bootstrap": "^3.x.x",
